# Reporting_openpyxl

./: .Dockerignore  .coverage  .gitignore  Dockerfile  README.md  config.yaml  main.ipynb  main.py  pyproject.toml
.github/workflows/: tests.yaml
.streamlit/: pages.toml
DAL/: s3_storage.py
config/: config.py
create_data/: csv_to_parquet.py  populate.py
dal/: __init__.py
docs/: main.ipynb
example/: fichier_a_remplir.xlsx
reporting_generator/: __init__.py  fill_indicators.py  insert_data.py  reporting_job.py
streamlit/: streamlit-app.py
streamlit/pages/: analysis.py  exploration.py  home.py  quality.py
streamlit/utils/: data_loader.py
tests/: test_fill_indicators.py  test_insert_data.py  test_reporting_job.py
