[project]
name = "financialreporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl==3.1.3",
    "pandas>=2.2.3",
    "ruff[jupyter]>=0.11.8",
    "seaborn>=0.13.2",
]
