[project]
name = "financialreporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.38.27",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl==3.1.3",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dal", "reporting_generator"]

[tool.ruff]
exclude = [
    "*.ipynb",
    ".venv",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]
